@@ -1,4 +1,7 @@
-﻿[B]1.0.11[/B]
+﻿[B]1.0.12[/B]
+- URL feloldás BugFix
+
+[B]1.0.11[/B]
 - főmenü átalakítása
 - megjelenés éve szerinti bontás
 - sorozatok javítása
